@@ -43,9 +43,11 @@
 #include "npplat.h"
 #include "pluginbase.h"
 
+#include "pcmanx_utils.h"
+
 NPNetscapeFuncs NPNFuncs;
 
-NPError OSCALL NP_Shutdown()
+X_EXPORT NPError OSCALL NP_Shutdown()
 {
   NS_PluginShutdown();
   return NPERR_NO_ERROR;
@@ -148,7 +150,7 @@ static NPError fillNetscapeFunctionTable(NPNetscapeFuncs* aNPNFuncs)
 /**************************************************/
 #ifdef XP_WIN
 
-NPError OSCALL NP_Initialize(NPNetscapeFuncs* aNPNFuncs)
+X_EXPORT NPError OSCALL NP_Initialize(NPNetscapeFuncs* aNPNFuncs)
 {
   NPError rv = fillNetscapeFunctionTable(aNPNFuncs);
   if(rv != NPERR_NO_ERROR)
@@ -157,7 +159,7 @@ NPError OSCALL NP_Initialize(NPNetscapeFuncs* aNPNFuncs)
   return NS_PluginInitialize();
 }
 
-NPError OSCALL NP_GetEntryPoints(NPPluginFuncs* aNPPFuncs)
+X_EXPORT NPError OSCALL NP_GetEntryPoints(NPPluginFuncs* aNPPFuncs)
 {
   return fillPluginFunctionTable(aNPPFuncs);
 }
@@ -171,7 +173,7 @@ NPError OSCALL NP_GetEntryPoints(NPPluginFuncs* aNPPFuncs)
 /**************************************************/
 #ifdef XP_UNIX
 
-NPError NP_Initialize(NPNetscapeFuncs* aNPNFuncs, NPPluginFuncs* aNPPFuncs)
+X_EXPORT NPError NP_Initialize(NPNetscapeFuncs* aNPNFuncs, NPPluginFuncs* aNPPFuncs)
 {
   NPError rv = fillNetscapeFunctionTable(aNPNFuncs);
   if(rv != NPERR_NO_ERROR)
@@ -184,12 +186,12 @@ NPError NP_Initialize(NPNetscapeFuncs* aNPNFuncs, NPPluginFuncs* aNPPFuncs)
   return NS_PluginInitialize();
 }
 
-char * NP_GetMIMEDescription(void)
+X_EXPORT char * NP_GetMIMEDescription(void)
 {
   return NPP_GetMIMEDescription();
 }
 
-NPError NP_GetValue(void *future, NPPVariable aVariable, void *aValue)
+X_EXPORT NPError NP_GetValue(void *future, NPPVariable aVariable, void *aValue)
 {
   return NS_PluginGetValue(aVariable, aValue);
 }
@@ -284,7 +286,7 @@ void SetUpQD(void)
 #endif /* !TARGET_API_MAC_CARBON */
 }
 
-NPError main(NPNetscapeFuncs* nsTable, NPPluginFuncs* pluginFuncs, NPP_ShutdownUPP* unloadUpp);
+X_EXPORT NPError main(NPNetscapeFuncs* nsTable, NPPluginFuncs* pluginFuncs, NPP_ShutdownUPP* unloadUpp);
 
 #if !TARGET_API_MAC_CARBON
 #pragma export on
@@ -295,7 +297,7 @@ RoutineDescriptor mainRD = BUILD_ROUTINE_DESCRIPTOR(uppNPP_MainEntryProcInfo, ma
 #endif /* !TARGET_API_MAC_CARBON */
 
 
-NPError main(NPNetscapeFuncs* aNPNFuncs, NPPluginFuncs* aNPPFuncs, NPP_ShutdownUPP* aUnloadUpp)
+X_EXPORT NPError main(NPNetscapeFuncs* aNPNFuncs, NPPluginFuncs* aNPPFuncs, NPP_ShutdownUPP* aUnloadUpp)
 {
   NPError rv = NPERR_NO_ERROR;
 
